tests/negative/maps/type_mismatch_literal/input.ci
void main() {
    int[string] m = ["a": true];
}
